# Ahmad5

./: README.md  README.me
Animation app/my-app/: package-lock.json  package.json  tailwind.config.ts
Assignments which left/Assignment no 6/: Site url.txt  abc.css  index.html
Assignments which left/Assignment no 7/: index.html  style.css  url.txt
Assignments which left/Assignment no 8/: index.html
Assignments/Assignment 14/: script.js
Assignments/Assignment no 10/: Assignment 2.webm
Assignments/Assignment no 2/: index.html
Assignments/Assignment no 3/: Assignment no 3.txt  index.html.html
Assignments/Assignment no 4/: abc.css  index.html
Assignments/Assignment no 6/: index.html
Assignments/Assignment no 7/: style.css
Assignments/Assingment 12/: script.js
Class 7/: 2a6bbb5e-07f.jpg.txt  _!DOCTYPE html_d.html  index.html.html  inedx.css
Class 7/index.css/: Index.html
Class 9/: abc.css  indexv.html
Class10/: index.html
Expo-App/MyApp/: package.json
HTML and CSS/Class 6/: index._html_.html
HTML and CSS/Class-01/: index.html
HTML and CSS/Class10/: abc.css
HTML and CSS/class 5/: 70675883_1.txt
HTML and CSS/class11/: h1{.css
HTML and CSS/class12/: .gitignore
JavaScript/Class no 1/: index.html
JavaScript/Class no 11/: script.js
JavaScript/Class no 13/: script.js
JavaScript/Class no 15/: index.html  util.js
JavaScript/Class no 2/: script.js
JavaScript/Class no 3/: Script.js
JavaScript/Class no 4/: script.js
JavaScript/Class no 9/: script.js
Js Class4,5,6,7/Class no 4/: script.js
Js Class4,5,6,7/Class no 6/: script.js
Js Class4,5,6,7/Class no 7/: index.html  script.js
Js Class4,5,6,7/class no 5/: script.js
My App/My App/: .env  package.json  server.js
My App/my-app/: README.md  package-lock.json  package.json
NODEJS/Class no 1/: package-lock.json  package.json  server.js
NODEJS/PortFolio_Backend/: .env  package-lock.json  package.json  server.js
NextJS/MY_PORTFOLIO/: README.md  package.json  vite.config.ts.timestamp-1745413654827-e461e99b602a9.mjs
NextJS/best-app/: package-lock.json  package.json
NextJS/my-app/: package-lock.json  package.json
OpenAI Agents SDK/basics_agents/myapp/: pyproject.toml
OpenAI Agents SDK/basics_agents/myapp/src/myapp/: newapp.py
OpenAI Agents SDK/basicuvpro/: pyproject.toml
OpenAI Agents SDK/class_01/basicuvpro/: pyproject.toml
OpenAI Agents SDK/class_01/basicuvpro/src/basicuvpro/: app.py
OpenAI Agents SDK/class_04/newApp/: .gitignore  pyproject.toml
OpenAI Agents SDK/class_04/newApp/src/newapp/: __init__.py  app.py
OpenAI Agents SDK/class_05/myApp/: .env  pyproject.toml
Python/Basics_01/: README.md  app.py  app2.py  dataTypes.md
Python/python-tutorial/: app.py
React-Native/New-app/: .env copy  .env.example  .gitignore  App.tsx  babel.config.js  package-lock.json  package.json
React-Native/StickerSmash/: package-lock.json
React-Native/c-01/: app.json  package-lock.json  package.json
React-Native/expo-app/: package-lock.json
ReactJS/assignment-no-18/: package-lock.json
ReactJS/bg-removal/: package-lock.json  package.json  pnpm-lock.yaml
ReactJS/bg-remove/: .env  package-lock.json  package.json
ReactJS/class-no-03/: README.md
ReactJS/lwa/: package-lock.json  package.json
ReactJS/my-app/: .env  package-lock.json  package.json
SQL/: README.md  class_01.sql  class_02.sql  class_03.sql  joins in SQL.sql  new.mwb.bak  table_related_queries.sql  task_01.sql  task_02.sql
awsome page/3D UI Card/: index.html
awsome page/CSS Glowing Menu/: index.html  style.css
awsome page/Card Hover Effect/: index.html  style.css
awsome page/Facebook Reaction/: index.html  style.css
awsome page/Love page/: index.html  script.js  style.css
awsome page/Majic Navigation Menu/: index.html  style.css
awsome page/Navigation Menu Tooltips/: index.html  style.css
class12/: cv.css  index.html  style.css
class13/: index.html
class14/: abc.css
class15/: abc.css
my-app/: README.md  package-lock.json  package.json
my-app/src/: App.js  index.js
⚛️ ReactJS/animated_portfolio/: Arahmad-Developer-Portfolio.tsx
⚛️ ReactJS/assignment-no-18/: README.md  package.json
⚛️ ReactJS/class-no-03/: README.md
⚛️ ReactJS/class-no-1/: README.md
⚛️ ReactJS/ecommerce-website/: README.md
⚛️ ReactJS/lwa/: lwa.rar
⚛️ ReactJS/my-app/: .env  README.md  package-lock.json
🐍Python/FASTAPI/Authenticate Users/: README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt
🐍Python/Pydantic/01_pydantic/: pyproject.toml
🐍Python/Pydantic/01_pydantic/app/: myapp.py  task.py
🐍Python/Pydantic/01_pydantic/app/fastapi/: app.py
🐍Python/Pydantic/01_pydantic/app/nested_model/: nested_model.py  task.py
🐍Python/Pydantic/01_pydantic/app/serialization/: app.py
🐍Python/Pydantic/01_pydantic/app/validator/: validator.py
🐍Python/Pydantic/01_pydantic/src/01_pydantic/: __init__.py
🐍Python/fastApi with MySql/: database.py  main.py  models.py  pyproject.toml
🤖 Agentic AI/class_02/myName/: pyproject.toml
🤖 Agentic AI/class_02/myName/src/myname/: app.py
🤖 Agentic AI/class_06/emailextractor/: pyproject.toml
🤖 Agentic AI/class_06/emailextractor/src/emailextractor/: app.py
🤖 Agentic AI/class_07/myhandsoff/: pyproject.toml
🤖 Agentic AI/class_07/myhandsoff/src/myhandsoff/: __init__.py  app.py  openaihandsoff.py
(+488 files in other folders)
