[project]
name = "basicuvpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ArAhmadRaza", email = "arahmadraza5570@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
        "openai-agents>=0.0.15",
]

[project.scripts]
basicuvpro = "basicuvpro:main"
app = "basicuvpro.app:app"
helloworld = "basicuvpro.folder.hello.hello:helloworld"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
