[project]
name = "01-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ArAhmadRaza", email = "arahmadraza5570@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[project.scripts]
01-pydantic = "01_pydantic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
