[project]
name = "emailextractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ArAhmadRaza", email = "arahmadraza5570@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.4",
]

[project.scripts]
emailextractor = "emailextractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
