[project]
name = "myhandsoff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ArAhmadRaza", email = "arahmadraza5570@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "openai-agents>=0.0.15",
]

[project.scripts]
myhandsoff = "myhandsoff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
